--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 	font-family: 'HelveticaNeue', sans-serif
 
 $font-color: #ffffff
-$yellow: #ffd304
+$yellow: #ffdf04
 $blue: #25afe8
 
 
@@ -19,7 +19,6 @@ $blue: #25afe8
     box-sizing: inherit
     padding: 0
     margin: 0
-    letter-spacing: 1.1px
     +helvetica
 
 h3
@@ -42,6 +41,9 @@ h3
         &__call, &__personal-info
             display: flex
             justify-content: space-between
+            & a
+                color: $yellow
+                text-decoration: none
             &--contact
                 padding-left: 5px
 
@@ -50,7 +52,7 @@ h3
     font-size: 28px
 
 .adress
-    font-size: 13px
+    font-size: 14px
 
 .personal-info
     display: flex
@@ -64,21 +66,65 @@ h3
 .right
     padding-right: 30px
 
-.catalog
+.list
     margin: 0 auto
     padding: 15px 0
     display: flex
     justify-content: space-between
     align-items: center
     width: 1300px
-    &__drop-down
+    &__drop-down ul
         height: 56px
         width: 263px
-        background-color: transparent
         background-color: $yellow
         border: none
-        padding: 5px 35px 5px 5px
         font-size: 20px
+        padding: 0
+        list-style: none
+        position: relative
+        & li
+            display: flex
+            justify-content: center
+            align-items: center
+            padding: 18px 0
+            &:hover
+                cursor: pointer
+            & span
+                margin-left: 30px
+                display: block
+                color: black
+                text-decoration: none
+        ul
+            display: none
+            background: #ffffff
+            padding: 0px
+            position: absolute
+            top: 100%
+        li:hover > ul
+            display: block
+        ul
+            li
+                display: flex
+                align-items: center
+                justify-content: flex-start
+                position: relative
+                padding: 13px
+                border-bottom: 1px solid #aeaeae
+                color: #aeaeae
+                background: #ffffff
+                font-size: 16px
+            & img
+                margin-right: 15px
+            & a
+                text-decoration: none
+                color: #aeaeae
+            & a:hover
+                color: $blue
+            ul
+                position: absolute
+                top: -10px
+                left: 100%
+                width: 120%
     &__gift
         display: flex
         align-items: center
@@ -91,7 +137,7 @@ h3
     &__search, &__search--descr
         display: flex
         align-items: center
-        justify-content: space-between
+        justify-content: space-around
         &--input
             width: 492px
             height: 52px
@@ -102,7 +148,6 @@ h3
             background-color: #efefef
             width: 154px
             height: 52px
-            padding: 0 10px
             border: 1px solid gray
         &--btn
             width: 134px
@@ -116,6 +161,9 @@ h3
 .slider
     display: flex
     justify-content: space-between
+    &__svg
+        position: relative
+        cursor: pointer
     &__img-2
         display: flex
         flex-direction: column
@@ -209,6 +257,12 @@ h3
         font-weight: bold
 
 .catalog
+    margin: 0 auto
+    width: 1300px
+    display: grid
+    grid-template-rows: 1fr 1fr 1fr
+    grid-template-columns: 1fr 1fr 1fr 1fr
+    grid-gap: 2vw
     &__card
         height: 403px
         width: 300px
@@ -261,6 +315,9 @@ h3
             & img
                 margin-right: 20px
 
+.pdng
+    padding-top: 32px
+
 .old-price
     line-height: 120%
     font-size: 16px
@@ -275,6 +332,7 @@ h3
     background-image: url(../img/background.jpg)
     background-repeat: no-repeat
     margin-left: 150px
+    margin-top: 70px
     width: 1300px
     display: flex
     justify-content: space-between
@@ -292,6 +350,7 @@ h3
         border-radius: 26px
         font-size: 16px
         font-weight: bold
+        cursor: pointer
     &__descr
         width: 800px
         padding-left: 35px
@@ -323,7 +382,7 @@ h3
             text-decoration: underline
         &--descr
             margin: 10px 0
-            font-size: 13px
+            font-size: 14px
         &--social
             & img
                 width: 40%
@@ -355,6 +414,7 @@ h3
             color: $font-color
             border: none
             border-radius: 0 30px 30px 0
+            cursor: pointer
 
 footer
     background: #191919
@@ -383,6 +443,7 @@ footer
                 margin: 30px 0
             &--adress
                 font-size: 14px
+                padding-bottom: 10px
             &--map a
                 text-decoration: underline
                 color: $yellow
@@ -397,3 +458,6 @@ footer
                         color: $font-color
                     & a:hover
                         color: $yellow
+
+
+.catalog
