--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Caveat");
 * {
   margin: 0px;
   padding: 0px;
@@ -51,8 +52,10 @@ h3 {
           -ms-flex-pack: justify;
               justify-content: space-between; }
       .wrapper .header__call a, .wrapper .header__personal-info a {
-        color: #ffdf04;
-        text-decoration: none; }
+        text-decoration: none;
+        color: #ffffff; }
+        .wrapper .header__call a:hover, .wrapper .header__personal-info a:hover {
+          color: #ffdf04; }
       .wrapper .header__call--contact, .wrapper .header__personal-info--contact {
         padding-left: 5px; }
 
@@ -157,6 +160,8 @@ h3 {
       color: #aeaeae;
       background: #ffffff;
       font-size: 16px; }
+      .list__drop-down ul ul li:hover {
+        background: #dcdcdc; }
     .list__drop-down ul ul img {
       margin-right: 15px; }
     .list__drop-down ul ul a {
@@ -439,7 +444,8 @@ h3 {
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center;
-      font-weight: bold; }
+      font-weight: bold;
+      cursor: pointer; }
       .card-descr__price--btn img {
         margin-right: 20px; }
 
